[package]
name = "xcm-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
scale-info = { version = "2.1.2", features = ["derive"] }
smallvec = {workspace = true}
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.33" }

xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.33" }
xcm-simulator = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.33" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.33" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.33" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.33" }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.33" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.33" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.33" }
pallet-assets = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }

# ORML Pallets
orml-xtokens = {git = "https://github.com/open-web3-stack/open-runtime-module-library.git", default-features = false, branch = "polkadot-v0.9.33"}
orml-traits = {git = "https://github.com/open-web3-stack/open-runtime-module-library.git", default-features = false, branch = "polkadot-v0.9.33"}

# Custom pallets
xcm-handler = {path = "../pallets/xcm-handler"}
asset-handler = {path = "../pallets/asset-handler"}
router = {path = "../pallets/router"}
pallet-amm = {path = "../pallets/swap"}
support = {path = "../pallets/support"}

[lib]
doctest = false