[package]
name = "xcm-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
scale-info = { version = "2.1.2", features = ["derive"] }
smallvec = { workspace = true }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37" }

xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37" }
xcm-simulator = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37" }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37" }
pallet-assets = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }

# ORML Pallets
orml-xtokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "polkadot-v0.9.37" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git",  branch = "polkadot-v0.9.37" }
orml-xcm-support = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git",  branch = "polkadot-v0.9.37" }

# Custom pallets
xcm-helper = { path = "../pallets/xcm-helper" }
asset-handler = { path = "../pallets/asset-handler" }
# FIXME: After fixing and merging PR #741 branch name here should be changed to `Develop` or new tag should be created and used.
pallet-amm = { git = "https://github.com/Polkadex-Substrate/Polkadex.git", branch = "gj-parachain" }
# FIXME: After fixing and merging PR #741 branch name here should be changed to `Develop` or new tag should be created and used.
support = { git = "https://github.com/Polkadex-Substrate/Polkadex.git", branch = "gj-parachain" }
# FIXME: After fixing and merging PR #741 branch name here should be changed to `Develop` or new tag should be created and used.
router = { git = "https://github.com/Polkadex-Substrate/Polkadex.git", branch = "gj-parachain" }
# FIXME: After fixing and merging PR #741 branch name here should be changed to `Develop` or new tag should be created and used.
thea-message-handler = { git = "https://github.com/Polkadex-Substrate/Polkadex.git", branch = "gj-parachain" }
# FIXME: After fixing and merging PR #741 branch name here should be changed to `Develop` or new tag should be created and used.
thea-primitives = { git = "https://github.com/Polkadex-Substrate/Polkadex.git", branch = "gj-parachain" }

[lib]
doctest = false
