[package]
name = "xcm-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
scale-info = { version = "2.1.2", features = ["derive"] }
smallvec = { workspace = true }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }

xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
xcm-simulator = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
pallet-assets = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
pallet-message-queue = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
pallet-uniques = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }

# ORML Pallets
#TODO: Update these dependencies
orml-xtokens = { git = "https://github.com/rakanalh/open-runtime-module-library.git", branch = "feature/update-polkadot-0.9.43" }
orml-traits = { git = "https://github.com/rakanalh/open-runtime-module-library.git", branch = "feature/update-polkadot-0.9.43" }
orml-xcm-support = { git = "https://github.com/rakanalh/open-runtime-module-library.git", branch = "feature/update-polkadot-0.9.43" }

# Custom pallets
xcm-helper = { path = "../pallets/xcm-helper" }
thea-message-handler = { git = "https://github.com/Polkadex-Substrate/Polkadex.git", branch = "Develop" }
thea-primitives = { git = "https://github.com/Polkadex-Substrate/Polkadex.git", branch = "Develop" }

[lib]
doctest = false
