[package]
name = "xcm-handler"
authors = ["business@polkadex.trade"]
description = "XCM Handler."
version = "0.1.0"
license = "GNU GPL v3"
homepage = "https://polkadex.trade/"
repository = "https://github.com/Polkadex-Substrate/parachain"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
pallet-timestamp = { workspace = true, default-features = false }
# Substrate
frame-benchmarking = { workspace = true, default-features = false, optional = true }
pallet-assets = { workspace = true, default-features = false, optional = true }
frame-support = {  default-features = false, workspace = true }
frame-system = { workspace = true, default-features = false }
xcm-executor = { workspace = true, default-features = false }
xcm = { workspace = true, default-features = false }
pallet-xcm = { workspace = true, default-features = false }
xcm-builder = { workspace = true, default-features = false }
orml-xtokens = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
cumulus-primitives-core = { workspace = true, default-features = false }
support = { path = "../support", default-features = false }
[dev-dependencies]
serde = { workspace = true }

# Substrate
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"xcm-executor/std",
	"pallet-xcm/std",
	"orml-xtokens/std",
	"sp-runtime/std",
	"sp-core/std",
	"cumulus-primitives-core/std",
	"pallet-assets/std",
	"xcm-builder/std",
	"support/std"
]
try-runtime = [ "frame-support/try-runtime" ]
